...
            SearchBar(searchText: $viewModel.searchQuery)
                .onChange(of: viewModel.searchQuery) { newValue in
                    Task {
                        await viewModel.fetchLocations(query: newValue)
                    }
                }
                .accessibilityIdentifier("searchBar")
            if viewModel.isLoading {
                Spacer()
                ProgressView("Cargando...")
            } else if let error = viewModel.error {
                Text("Error al obtener datos: \(error.localizedDescription)")
                    .foregroundColor(.red)
...
